Add a basic permissions system

--- a/lib/meson.build
+++ b/lib/meson.build
@@ -43,6 +43,7 @@ install_headers([
     'gs-auth.h',
     'gs-category.h',
     'gs-os-release.h',
+    'gs-permission.h',
     'gs-plugin.h',
     'gs-plugin-event.h',
     'gs-plugin-types.h',
@@ -78,6 +79,7 @@ libgnomesoftware = static_library(
     'gs-category.c',
     'gs-debug.c',
     'gs-os-release.c',
+    'gs-permission.c',
     'gs-plugin.c',
     'gs-plugin-event.c',
     'gs-plugin-job.c',
